--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     --secondary-color: #58626E;
     --tertiary-color: #9DB3BE;
     --quaternary-color: #CCA152;
+    --mainMargin: 2%;
 
 }
 
@@ -63,9 +64,8 @@ body>#registrationForm>div:first-child {
     padding: 10px;
     background-color: var(--secondary-color);
     color: white;
-    margin-bottom: 2%;
+    margin-bottom: var(--mainMargin);
 }
-
 
 form {
     width: 100%;
@@ -79,10 +79,16 @@ form {
 form select {
     width: 40%;
 }
-form span{
+
+form span {
     text-align: center;
     overflow-wrap: break-word;
     overflow: hidden;
+    text-transform: capitalize;;
+
+}
+form label{
+    text-transform: capitalize;;
 }
 
 /* main container */
@@ -100,11 +106,10 @@ form>div>div {
     align-items: center;
     width: 100%;
     margin-bottom: 5%;
-
 }
 
-input{
-    padding:2px;
+input {
+    padding: 2px;
 }
 
 form>.skills {
@@ -114,33 +119,33 @@ form>.skills {
 }
 
 form>.skills>div {
-    width: calc(100% / 3);
+    width: calc(100% / 2);
 }
 
 form>.skills>div>.allSkills {
     max-width: 50%;
-    margin-left: 2%;
+    margin-left: var(--mainMargin);
 }
 
-form>.skills>div>.allSkills>div{
+form>.skills>div>.allSkills>div {
     max-width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin-bottom: 2%;
+    margin-bottom: var(--mainMargin);
 }
 
-form>.skills>div>.allSkills>div label{
-    margin-left: 2%;
+form>.skills>div>.allSkills>div label {
+    margin-left: var(--mainMargin);
     width: 90%;
     overflow-wrap: break-word;
 }
 
-
-form input[type='submit'] {
+form>div:last-child>input {
     background-color: var(--quaternary-color);
     width: 100%;
+    margin-left: var(--mainMargin);
 
 }
 
@@ -162,22 +167,19 @@ form .code {
         justify-content: space-evenly;
         align-items: center;
         width: 100%;
-
     }
 
     form .more>div:first-child {
         margin-bottom: 5%;
     }
 
-
     label+input {
         width: 50%;
-    }
 
+    }
 }
 
 @media (max-width:600PX) {
-
     body>#registrationForm {
         width: 80%;
     }
