--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ header {
     align-items: center;
     position: fixed;
     top: 0px;
+    left:0px;
     z-index: 1;
     padding: 20px;
     color: white;
@@ -210,7 +211,7 @@ form .code {
 .table td,
 .table th {
     width: 1%;
-    padding: 5px;
+    padding: 10px;
     text-align: center;
     overflow-wrap: break-word;
 
