--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@
     --quaternary-color: #CCA152;
     --mainMargin: 2%;
     --headerMargin: 8%;
-    --headerPadding: 10px;
-    --mainPadding: 20px;
+    --headerPadding: 1%;
+    --mainPadding: 2%;
+    --FFHeader: cursive;
 
 }
 
@@ -22,81 +23,76 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: fixed;
-    top: 0px;
-    left:0px;
-    z-index: 1;
-    padding: var(--mainPadding);
+    z-index: 126;
+    padding: var(--headerPadding);
     color: white;
-
+    font-family: var(--FFHeader);
 }
 
 header>div {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding:var(--headerPadding);
+    padding: var(--headerPadding);
 
 }
 
-header>div>a{
+header>div>a {
     text-decoration: none;
     color: white;
     font-weight: bold;
     text-transform: capitalize;
-    transition:.5s;    
+    transition: .5s;
 }
 
 
-header>nav{
+header>nav {
     display: flex;
     justify-content: space-between;
 
     align-items: center;
-    width:50%;
+    width: 50%;
 }
 
-header>nav>ul{
+header>nav>ul {
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width:100%;
+    width: 100%;
     list-style: none;
 }
 
-header>nav>ul>li{
+header>nav>ul>li {
     margin-left: var(--headerMargin);
 }
 
-header>nav>ul>li>a{
+header>nav>ul>li>a {
     text-decoration: none;
     color: white;
     font-weight: bold;
     text-transform: capitalize;
 }
 
+body {
+    min-width: 270px;
+    overflow: auto;
+}
 
-
-#mainTable{
-    padding:20px;
+#mainTable {
+    padding: 20px;
 }
 
 form textarea {
     resize: none;
     overflow-y: scroll;
-    width: 70%;
-}
-
-body {
-    padding-top: 100px;
-    min-width: 260px;
 }
 
 input:not('checkbox') {
-    width: 65%;
+    width: 100%;
 }
 
-input[type='file']{
+form label,
+form input[type='file'] {
     overflow-wrap: break-word;
     overflow: hidden;
     white-space: break-spaces;
@@ -111,7 +107,7 @@ body>#loginForm {
     flex-direction: column;
     width: 70%;
     background-color: var(--tertiary-color);
-
+    margin: var(--mainMargin) auto;
 }
 
 body>#registrationForm>div,
@@ -123,12 +119,14 @@ body>#loginForm>div {
 }
 
 
-body>#registrationForm>div:first-child,
-body>#loginForm>div:first-child {
+.title {
+    display: block;
     padding: 10px;
-    background-color: var(--primary-color);
+    background-color: var(--secondary-color);
     color: white;
     margin-bottom: var(--mainMargin);
+    font-family: var(--FFHeader);
+
 }
 
 form {
@@ -137,25 +135,21 @@ form {
     justify-content: space-between;
     align-items: center;
     flex-direction: column;
-    padding: 2%;
+    padding: var(--mainPadding);
 }
 
-form select {
-    width: 40%;
-}
-
-form span {
+/* labels*/
+form span,
+form label {
     text-align: center;
     overflow-wrap: break-word;
     overflow: hidden;
     text-transform: capitalize;
-    ;
-
 }
 
-form label {
-    text-transform: capitalize;
-    ;
+form input,
+form select {
+    padding: 2px;
 }
 
 /* main container */
@@ -164,55 +158,64 @@ form>div {
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    margin-bottom: 5%;
 }
 
-/* seconde container contain the element +label */
-form>div>div {
+form .multi {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    margin-bottom: 5%;
+    flex-direction: column;
+    border: var(--secondary-color) 1px solid;
+    padding: var(--mainPadding);
 }
 
-input {
-    padding: 2px;
-}
-
-form>.skills {
-    flex-wrap: wrap;
-    margin-bottom: 0px;
-
-}
-
-form>.skills>div {
-    width: calc(100% / 2);
-}
-
-form>.skills>div>.allSkills {
-    max-width: 50%;
-    margin-left: var(--mainMargin);
-}
-
-form>div>div>*:last-child {
-    width: 68%;
-}
-
-form>.skills>div>.allSkills>div {
+form .multi>div {
     max-width: 100%;
+    overflow: auto;
+    width: 100%;
+}
+
+/* header multi */
+form .multi>div:first-child span {
+    font-family: var(--FFHeader);
+    color: black;
+
+}
+
+form .multi span {
+    color: var(--primary-color);
+}
+
+form .multi .allmulti {
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
-    justify-content: center;
-    margin-bottom: var(--mainMargin);
+    width: 100%;
+    padding: var(--mainPadding);
 }
 
-form>.skills>div>.allSkills>div label {
-    margin-left: var(--mainMargin);
-    width: 90%;
-    overflow-wrap: break-word;
+form .multi .allmulti>div {
+    max-width: 50%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    margin: var(--mainMargin);
 }
 
+
+/* seconde container contain the element +label */
+form>div>div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+/* buttons */
 form>div:last-child>input {
     background-color: var(--quaternary-color);
     width: 100%;
@@ -264,10 +267,10 @@ form .code {
 }
 
 
-.error{
-    background-color:var(--tertiary-color);
-    color:red;
-    padding:var(--mainPadding);
+.error {
+    background-color: var(--tertiary-color);
+    color: red;
+    padding: var(--mainPadding);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -276,21 +279,17 @@ form .code {
 /* media query  */
 
 @media (max-width: 800px) {
-    form .more {
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
+    form .more>div {
+        width: 100%;
+        margin-top: var(--mainMargin);
     }
 
-    form .more>div {
+    form .more {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
-        width: 100%;
-    }
-
-    form .more>div:first-child {
-        margin-bottom: 5%;
+        width: 90%;
+        flex-direction: column;
     }
 
     label+input {
@@ -301,6 +300,7 @@ form .code {
 
 
 @media (max-width:600PX) {
+
     body>#registrationForm,
     body>#loginForm {
         width: 85%;
